# django-ckeditor

./: .editorconfig  .gitignore  .gitmodules2  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  buildout.cfg  ckeditor_demo_requirements.txt  manage.py  requirements.pip  setup.cfg  setup.py  test_settings.py  tox.ini  xadmin.py
.github/workflows/: stale.yml  tests.yml
ckeditor/: __init__.py  apps.py  configs.py  fields.py  forms.py  image_processing.py  settings.py  tests.py  urls.py  utils.py  views.py  widgets.py
ckeditor/image/: dummy_backend.py  pillow_backend.py
ckeditor/management/commands/: generate_ckeditor_thumbnails.py  generateckeditorthumbnails.py
ckeditor/media/ckeditor/: ckeditor.pack
ckeditor/static/ckeditor/: ckeditor-basepath.js  ckeditor-init.js  ckeditor.css  ckeditor_php5.php  fixups.js
ckeditor/templates/: browse.html  browse_old.html
ckeditor/templates/ckeditor/: widget.html
ckeditor_demo/: settings.py  urls.py  wsgi.py
ckeditor_demo/demo_application/: admin.py  apps.py  forms.py  models.py  tests.py  views.py  widgets.py
ckeditor_uploader/: __init__.py  fields.py  forms.py  image_processing.py  urls.py  utils.py  views.py  widgets.py
ckeditor_uploader/backends/: __init__.py  dummy_backend.py  pillow_backend.py
ckeditor_uploader/image/: dummy_backend.py  pillow_backend.py
docs/: INSTALL.md  Makefile  USAGE.md  conf.py  index.md  index.rst  make.bat
media/uploads/: README.rst
project/: admin.py  models.py  settings.py  urls.py
static/: README.rst
test_project/test_project/: admin.py  settings.py  urls.py
(+856 files in other folders)
