[metadata]
license-file = LICENSE

[wheel]
universal = 1

[pep8]
max_line_length =  120

[flake8]
exclude = build,.git,docs,migrations,.tox
# ignore = E123,E128,E402,E501,W503,E731,W601
max-line-length = 120
statistics = true
count = true
show-source = true

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = ckeditor
multi_line_output = 5
not_skip = __init__.py
skip = migrations, .tox

[coverage:run]
source = ckeditor
branch = True

