[metadata]
license-file = LICENSE

[bdist_wheel]
universal = 1

[pep8]
max_line_length =  120

[flake8]
exclude = build,.git,docs,migrations,.tox,venv
# ignore = E123,E128,E402,E501,W503,E731,W601
max-line-length = 120
statistics = true
count = true
show-source = true

[coverage:run]
source = ckeditor,ckeditor_demo,ckeditor_uploader
branch = True
